--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "install:prod": "concurrently \"npm install\" \"npm run install:backend\" \"npm run install:frontend\"",
     "start:backend": "cd backend && npm start",
     "start:frontend": "cd frontend && npx serve -s build",
     "dev:frontend": "cd frontend && npm start",
-    "dev:backend": "cd backend && npm start"
+    "dev:backend": "cd backend && npm start",
+    "install:backend": "cd backend && npm install",
+    "install:frontend": "cd frontend && npm install"
   }
 }
