--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "serve": "^14.2.1"
   },
   "scripts": {
-    "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
+    "start": "concurrently \"npm install:prod\" \"npm run start:backend\" \"npm run start:frontend\"",
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "install:prod": "concurrently \"npm install\" \"npm run install:backend\" \"npm run install:frontend\"",
     "start:backend": "cd backend && npm start",
