--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "electron-serve": "^1.0.0",
     "concurrently": "^8.2.2",
-    "serve": "^14.2.1",
     "electron": "^28.2.2",
     "electron-builder": "^24.9.1",
+    "electron-serve": "^1.0.0",
     "react-scripts": "^5.0.1",
+    "serve": "^14.2.1",
     "wait-on": "^5.2.0"
   },
   "scripts": {
@@ -25,5 +25,8 @@
     "install:frontend": "cd frontend && npm install",
     "electron": "wait-on http://localhost:3000 && electron .",
     "app": "concurrently \"npm run start\" \"npm run electron\""
+  },
+  "dependencies": {
+    "winston": "^3.11.0"
   }
 }
